examples/demo-app/policy-with-l7.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-policy
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: netshoot-client
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              # - method: "GET"
              #   path: "/"
              - method: "GET"
                path: "/index.html"
